// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package web.proto;

option optimize_for = LITE_RUNTIME;

// Represents an instant in time.
//
// Represents the number of microseconds elapsed since the Windows Epoch
// (see base::Time for details on the representation).
//
// All the fields are required.
message Timestamp {
  int64 microseconds = 1;
}

// User agent selected by the user.
enum UserAgentType {
  None = 0;
  Automatic = 1;
  Mobile = 2;
  Desktop = 3;
}
